--- a/camel-spring-boot-jms-xa/pom.xml
+++ b/camel-spring-boot-jms-xa/pom.xml
@@ -62,6 +62,10 @@
             <artifactId>camel-log-starter</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.apache.camel.springboot</groupId>
+            <artifactId>camel-sql-starter</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-artemis</artifactId>
             <version>${spring-boot.version}</version>
@@ -72,12 +76,18 @@
             <version>${spring-boot.version}</version>
             <scope>test</scope>
         </dependency>
-        <!-- dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>2.1.212</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.apache.activemq</groupId>
             <artifactId>artemis-jms-server</artifactId>
             <version>2.19.1</version>
             <scope>test</scope>
-        </dependency -->
+        </dependency>
         <dependency>
             <groupId>org.awaitility</groupId>
             <artifactId>awaitility</artifactId>
