--- a/camel-spring-boot-jms-xa/src/test/resources/application.properties
+++ b/camel-spring-boot-jms-xa/src/test/resources/application.properties
@@ -1,1 +1,6 @@
 spring.artemis.broker-url = tcp://localhost:61616
+
+spring.datasource.username = sa
+spring.datasource.password =
+spring.datasource.xa.data-source-class-name = org.h2.jdbcx.JdbcDataSource
+spring.datasource.url = jdbc:h2:mem:test
