--- a/camel-spring-boot-jms-xa/src/test/resources/application.properties
+++ b/camel-spring-boot-jms-xa/src/test/resources/application.properties
@@ -1,4 +1,4 @@
-spring.artemis.broker-url = tcp://localhost:61616
+spring.artemis.broker-url = vm://localhost
 
 spring.datasource.username = sa
 spring.datasource.password =
