--- a/camel-spring-boot-jms-xa/pom.xml
+++ b/camel-spring-boot-jms-xa/pom.xml
@@ -87,6 +87,12 @@
             <artifactId>artemis-jms-server</artifactId>
             <version>2.19.1</version>
             <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.jboss.logmanager</groupId>
+                    <artifactId>jboss-logmanager</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.awaitility</groupId>
