--- a/camel-spring-boot-jms-xa/src/test/resources/application.properties
+++ b/camel-spring-boot-jms-xa/src/test/resources/application.properties
@@ -1,6 +1,11 @@
+camel.springboot.tracing = true
+camel.springboot.message-history = true
+camel.springboot.use-breadcrumb = true
+camel.springboot.use-mdc-logging = true
+
 spring.artemis.broker-url = vm://localhost
 
 spring.datasource.username = sa
 spring.datasource.password =
 spring.datasource.xa.data-source-class-name = org.h2.jdbcx.JdbcDataSource
-spring.datasource.url = jdbc:h2:mem:test
+spring.datasource.url = jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
